--- a/package.json
+++ b/package.json
@@ -3,16 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@giphy/js-fetch-api": "^4.1.2",
+    "@giphy/js-types": "^4.1.0",
+    "@giphy/react-components": "^5.4.0",
+    "@mui/core": "^5.0.0-alpha.54",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.2",
+    "axios": "^0.25.0",
+    "lodash": "^4.17.21",
+    "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "tailwindcss": "^3.0.18",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
